syntax = "proto3";

package order;

option go_package = "wallet_kit_test/OrderService/proto;proto";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}

message CreateOrderResponse {
    string order_id = 1;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}
